<resources>
    <string name="app_name">Sound Light RGB</string>

    <string-array name="modeLightArray">
        <item>Audioritmico</item>
        <item>Color Solido</item>
        <item>Arcoiris</item>
    </string-array>
    <string name="titleWarning">Algo salió mal</string>
    <string name="errorCodeWarning">Error code: %1$s</string>
    <string name="gettingData">Obteniendo datos ...</string>
    <string name="title_activity_setup">SetupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="setupTitle">Configuración</string>
    <string name="token_string">Token: </string>
    <string name="powerVarString">Power var:</string>
    <string name="colorVarString">Color var:</string>
    <string name="brightnessVarString">Brightness var:</string>
    <string name="speedVarString">Speed var:</string>
    <string name="volumeVarString">Volume var:</string>
    <string name="modeVarString">Mode var:</string>
    <string name="whitePowerVarString">W. Power var:</string>
    <string name="whiteBrightnessVarString">W. Brig. var:</string>
    <string name="setup_modosTitle">Modos de iluminación</string>
    <string name="save_button_text">GUARDAR</string>
    <string name="error_saving_data">Algo ocurrió al guardar la información.</string>
    <string name="error_empty_saving_data">Falta algún campo por llenar.</string>
    <string name="setup_save_data_loader_text">Guardando datos...</string>
    <string name="hint_nombre_text">Nombre</string>
    <string name="hint_variable_id_text">Variable ID</string>
    <string name="mode_text_spinner">Modo:</string>


</resources>